RESOLVED FIXED58575
[chromium] REGRESSION(83820): Composited scrollbar layers sometimes not positioned when initially creating frame
https://bugs.webkit.org/show_bug.cgi?id=58575
Summary [chromium] REGRESSION(83820): Composited scrollbar layers sometimes not posit...
James Robinson
Reported 2011-04-14 14:40:10 PDT
[chromium] REGRESSION(83820): Composited scrollbar layers sometimes not positioned when initially creating frame
Attachments
Patch (4.39 KB, patch)
2011-04-14 14:44 PDT, James Robinson
fishd: review+
James Robinson
Comment 1 2011-04-14 14:44:03 PDT
James Robinson
Comment 2 2011-04-14 16:54:37 PDT
Note You need to log in before you can comment on or make changes to this bug.