third_party/WebKit/Source/WebCore/page/FrameView.cpp
@@ -1513,13 +1513,6 @@ void FrameView::contentsResized()
 {
     scrollAnimator()->contentsResized();
     setNeedsLayout();
-
-#if USE(ACCELERATED_COMPOSITING)
-    if (RenderView* root = m_frame->contentRenderer()) {
-        if (root->usesCompositing())
-            root->compositor()->frameViewDidChangeSize();
-    }
-#endif
 }
 
 void FrameView::visibleContentsResized()
@@ -1533,6 +1526,13 @@ void FrameView::visibleContentsResized()
 
     if (needsLayout())
         layout();
+
+#if USE(ACCELERATED_COMPOSITING)
+    if (RenderView* root = m_frame->contentRenderer()) {
+        if (root->usesCompositing())
+            root->compositor()->frameViewDidChangeSize();
+    }
+#endif
 }
 
 void FrameView::beginDeferredRepaints()
